--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
     "langchain": "^0.0.91",
+    "next-export": "^0.1.7",
     "openai": "^3.2.1",
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1",
