--- a/functions/package.json
+++ b/functions/package.json
@@ -26,6 +26,7 @@
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^3.7.107",
+    "stripe": "^14.13.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
