--- a/functions/package.json
+++ b/functions/package.json
@@ -27,7 +27,8 @@
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^3.7.107",
     "stripe": "^14.13.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "qs": "^6.11.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
