--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@google-cloud/tasks": "^3.1.2",
     "@pinecone-database/pinecone": "^0.1.6",
-    "axios": "^1.4.0",
+    "axios": "1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
