--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/tasks": "^3.1.2",
+    "@google-cloud/vertexai": "^0.4.0",
     "@pinecone-database/pinecone": "^0.1.6",
     "axios": "1.4.0",
     "cheerio": "^1.0.0-rc.12",
