--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.16.1",
     "@google-cloud/tasks": "^3.1.2",
     "@google-cloud/vertexai": "^0.4.0",
     "@pinecone-database/pinecone": "^0.1.6",
