--- a/functions/package.json
+++ b/functions/package.json
@@ -28,6 +28,8 @@
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^3.7.107",
+    "pino": "^8.19.0",
+    "pino-pretty": "^11.0.0",
     "qs": "^6.11.2",
     "stripe": "^14.13.0",
     "uuid": "^9.0.0"
