--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,9 @@
     "@google-cloud/tasks": "^3.1.2",
     "@google-cloud/vertexai": "^0.4.0",
     "@pinecone-database/pinecone": "^0.1.6",
+    "@sentry/cli": "^2.31.0",
+    "@sentry/node": "^7.109.0",
+    "@sentry/profiling-node": "^7.109.0",
     "axios": "1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
