--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@google-cloud/tasks": "^3.1.2",
+    "@google/generative-ai": "^0.11.4",
     "@pinecone-database/pinecone": "^0.1.6",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
