--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
     "@anthropic-ai/sdk": "^0.16.1",
     "@google-cloud/tasks": "^3.1.2",
     "@google-cloud/vertexai": "^0.4.0",
+    "@google/generative-ai": "^0.12.0",
     "@pinecone-database/pinecone": "^0.1.6",
     "@sentry/cli": "^2.31.0",
     "@sentry/node": "^7.109.0",
