Updates to gitignore and removal of additional files

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@ yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
 firebase-debug.*.log*
-writeeasy-675b2-firebase-adminsdk-zvuvo-1042963464.json
+functions/writeeasy-675b2-firebase-adminsdk-zvuvo-1042963464.json
 
 .env.dev
 .env.prod
-
+.vscode/
 # Firebase cache
 .firebase/
 
