--- a/functions/package.json
+++ b/functions/package.json
@@ -1,17 +1,21 @@
 {
   "name": "functions",
+  "type": "module",
   "description": "Cloud Functions for Firebase",
   "scripts": {
+    "build": "tsc",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "engines": {
     "node": "18"
   },
-  "main": "index.js",
+  "main": "index.ts",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.16.1",
     "@google-cloud/tasks": "^3.1.2",
@@ -25,6 +29,7 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "esmock": "^2.7.0",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.1",
     "firebase-functions": "^4.3.1",
@@ -36,10 +41,20 @@
     "pino-pretty": "^11.0.0",
     "qs": "^6.11.2",
     "stripe": "^14.13.0",
+    "typescript": "^5.7.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.1.0"
+    "@types/jest": "^29.5.14",
+    "chai": "^5.2.0",
+    "firebase-functions-test": "^3.1.0",
+    "jest": "^29.7.0",
+    "mocha": "^11.1.0",
+    "proxyquire": "^2.1.3",
+    "sinon": "^19.0.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2"
   },
   "private": true
 }
