--- a/functions/package.json
+++ b/functions/package.json
@@ -15,33 +15,9 @@
   "engines": {
     "node": "18"
   },
-  "main": "index.ts",
+  "main": "dist/index.js",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.16.1",
-    "@google-cloud/tasks": "^3.1.2",
-    "@google-cloud/vertexai": "^0.4.0",
-    "@google/generative-ai": "^0.12.0",
-    "@pinecone-database/pinecone": "^0.1.6",
-    "@sentry/cli": "^2.31.0",
-    "@sentry/node": "^7.109.0",
-    "@sentry/profiling-node": "^7.109.0",
-    "axios": "1.4.0",
-    "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "esmock": "^2.7.0",
-    "express": "^4.18.2",
-    "firebase-admin": "^11.11.1",
-    "firebase-functions": "^4.3.1",
-    "openai": "^4.26.0",
-    "path": "^0.12.7",
-    "pdf-parse": "^1.1.1",
-    "pdfjs-dist": "^3.7.107",
-    "pino": "^8.19.0",
-    "pino-pretty": "^11.0.0",
-    "qs": "^6.11.2",
-    "stripe": "^14.13.0",
-    "typescript": "^5.7.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -53,7 +29,8 @@
     "sinon": "^19.0.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
