--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,22 +1,26 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "es2020",
-    "moduleResolution": "node",
-    "allowJs": true,
-    "checkJs": false,
-    "outDir": "../dist",
+    "target": "ES2021",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "outDir": "./dist",
+    "rootDir": ".",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "strict": false,
     "skipLibCheck": true,
-    "sourceMap": true
+    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "declarationMap": true
   },
   "include": [
-    "./**/*"
+    "./**/*.ts"
   ],
   "exclude": [
     "node_modules",
-    "../dist"
+    "./dist",
+    "**/*.spec.ts",
+    "**/*.test.ts"
   ]
 }
